objects/FinServ__Record_Rollup_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configure record rollups in Financial Services Cloud.</description>
    <fields>
        <fullName>FinServ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to apply the settings to this object&apos;s records.</description>
        <label>Settings Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Object_Api_Name__c</fullName>
        <description>API name of the object that you want to configure record rollups for.</description>
        <label>Object Api Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinServ__Record_Rollup_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Maximum number of records in each batch. Default size is 200 records. Maximum size is 2000 records.</description>
        <label>Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__Record_Rollup_End_Date__c</fullName>
        <description>Limit the number of records in the batch job to those modified between rollup start and end dates for improved performance. If you don’t specify an end date, all records modified after the rollup start date are processed.</description>
        <label>Rollup End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__Record_Rollup_Start_Date__c</fullName>
        <description>Limit the number of records in the batch job to those modified between rollup start and end dates for improved performance. If you don’t specify a start date, all records modified before the rollup end date are processed.</description>
        <label>Rollup Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__Skip_Record_Rollup_Triggers__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Skip all triggers, workflow rules, and validations when rolling up records. Record Rollup Optimization (Beta) must be enabled.</description>
        <label>Skip Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Skip_Update_If_Household_Unchanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Skip updates to records where the Household field hasn&apos;t changed. Record Rollup Optimization (Beta) must be enabled.</description>
        <label>Skip Unchanged Household Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Update_Records_Silently__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use silent updates when updating records with household id. Silent update does not update Last Modified By and Last Modified Date fields in the record.</description>
        <inlineHelpText>To enable this feature, contact your account manager or Salesforce Customer Support.</inlineHelpText>
        <label>Update Records Silently</label>
        <type>Checkbox</type>
    </fields>
    <label>Record Rollup Configuration</label>
</CustomObject>